--- a/Settings.json
+++ b/Settings.json
@@ -19,7 +19,7 @@
             {
                 "Name": "AppSpecial",
                 "Type": 4,
-                "Url": "https://mixar.biz/"
+                "Url": "http://vcht.center/"
             },
             {
                 "Name": "License",
