--- a/Settings.json
+++ b/Settings.json
@@ -9,7 +9,7 @@
             {
                 "Name": "AppRate",
                 "Type": 2,
-                "Url": "https://mix-ar.ru/content/gibdd/"
+                "Url": "https://mix-ar.ru/links/vcht_pdd/"
             },
             {
                 "Name": "Markers",
