--- a/Settings.json
+++ b/Settings.json
@@ -27,5 +27,19 @@
                 "Url": "https://mix-ar.ru/content/gibdd/license.pdf"
             }
         ]
+    },
+    "AppRateUrl": {
+        "Values": [
+            {
+                "Name": "Android",
+                "TargetPlatform": 11,
+                "Value": "https://play.google.com/store/apps/details?id=com.mixar.gibdd&hl=ru&gl=RU"
+            },
+            {
+                "Name": "IPhonePlayer",
+                "TargetPlatform": 8,
+                "Value": "https://apps.apple.com/ru/app/%D0%B2%D1%86%D1%85%D1%82-%D0%BF%D0%B4%D0%B4/id1631597270"
+            }
+        ]
     }
 }
