--- a/Settings.json
+++ b/Settings.json
@@ -33,7 +33,7 @@
             {
                 "Name": "Android",
                 "TargetPlatform": 11,
-                "Value": "https://play.google.com/store/apps/details?id=com.mixar.gibdd&hl=ru&gl=RU"
+                "Value": "https://play.google.com/store/apps/details?id=com.mixar.gibdd"
             },
             {
                 "Name": "IPhonePlayer",
