--- a/Settings.json
+++ b/Settings.json
@@ -38,7 +38,7 @@
             {
                 "Name": "IPhonePlayer",
                 "TargetPlatform": 8,
-                "Value": "https://apps.apple.com/ru/app/%D0%B2%D1%86%D1%85%D1%82-%D0%BF%D0%B4%D0%B4/id1631597270"
+                "Value": "https://apps.apple.com/ru/app/id1631597270"
             }
         ]
     }
