--- a/Settings.json
+++ b/Settings.json
@@ -24,7 +24,7 @@
             {
                 "Name": "License",
                 "Type": 5,
-                "Url": "https://mix-ar.ru/content/gibdd/license.pdf"
+                "Url": "https://mix-ar.ru/content/vcht_pdd/license.html"
             }
         ]
     },
